--- a/whiteboard-app/src/index.css
+++ b/whiteboard-app/src/index.css
@@ -27,6 +27,8 @@ body {
 }
 
 .canvas {
+    position: absolute;
+    top:0;
     width: 100%;
     height:100%;
     cursor: crosshair;
@@ -51,11 +53,18 @@ button {
 #title {
     position: absolute;
     right: 20px;
-    z-index: 1;
+    z-index: 10;
 }
 
 @media only screen and (max-width: 600px) {
     #title {
         display: none;
     }
+}
+
+.bars {
+    position: absolute;
+    z-index: 10;
+    display: inline-block;
+    width: 320px;
 }
